--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 black==25.1.0
 click==8.1.8
 Django==5.1.6
+gunicorn==23.0.0
 iniconfig==2.0.0
 mypy-extensions==1.0.0
 packaging==24.2
@@ -13,6 +14,7 @@ pluggy==1.5.0
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
+pytest==8.3.5
 python-dotenv==1.0.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
