--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -42,6 +42,6 @@ jobs:
             cd core
             source venv/bin/activate
             pip install -r requirements.txt
-            python manage.py migrate
+            python manage.py migrate --noinput
             python manage.py collectstatic --noinput
             sudo systemctl restart gunicorn
