--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -41,3 +41,4 @@ jobs:
             python manage.py migrate --noinput
             python manage.py collectstatic --noinput
             sudo systemctl restart gunicorn
+            sudo systemctl restart nginx
