--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r core/requirements.txt
+          pip install -r requirements.txt
 
       - name: Run Tests
         run: |
@@ -35,7 +35,6 @@ jobs:
           script: |
             cd /var/www/shaxzodbek.com
             git pull origin deploy
-            cd core
             source venv/bin/activate
             pip install -r requirements.txt
             python manage.py migrate --noinput
