--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 black==25.1.0
 click==8.1.8
 Django==5.2.2
+django-jazzmin==3.0.1
 gunicorn==23.0.0
 iniconfig==2.0.0
 mypy-extensions==1.0.0
