- Add Docker support with Python-based web application and NGINX configuration - Implement docker-compose setup for local development and deployment - Improve static asset management with updated site manifest and favicons - Refine frontend templates and dependencies for consistency and functionality

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ __pycache__/
 .vscode
 .vscode/
 .DS_Store
-core/staticfiles/
-core/staticfiles
-core/staticfiles/*
+staticfiles/
+staticfiles
+staticfiles/*
 # C extensions
 *.so
 
