- Update footer.html to include DigitalOcean referral link - Adjust CI/CD workflows with 'issues' write permissions - Modify nginx config for new domain 'shaxzodbek.com', increase client max body size - Remove unused Nginx SSL volume mapping in docker-compose

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,15 +1,7 @@
 server {
     listen 80;
-    server_name 10.40.9.115;
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name 10.40.9.115;
-
-    ssl_certificate /etc/nginx/ssl/selfsigned.crt;
-    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
+    server_name shaxzodbek.com www.shaxzodbek.com;
+    client_max_body_size 20M;
 
     location /static/ {
         alias /app/staticfiles/;
