Update Docker configuration: add migrations to Dockerfile, define static/media volumes in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: .
     volumes:
       - .:/app
+      - staticfiles:/app/staticfiles
+      - media:/app/media
     ports:
       - "8000:8000"
 
