--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,7 +12,7 @@ server {
     }
 
     location /favicon.ico {
-        alias /app/static/img/favicon.jpg;
+        alias /app/static/img/favicon.ico;
     }
 
     location / {
