--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,7 @@ services:
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt/live/shaxzodbek.com/fullchain.pem:/etc/ssl/certs/shaxzodbek.crt:ro
+      - /etc/letsencrypt/live/shaxzodbek.com/privkey.pem:/etc/ssl/private/shaxzodbek.key:ro
     depends_on:
       - web
