--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,6 +21,11 @@ server {
         alias /app/media/;
     }
 
+    location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+    try_files $uri =404;
+    }
+
     location / {
         proxy_pass         http://web:8000;
         proxy_set_header   Host $host;
