--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,7 @@
 server {
     listen 80;
     server_name shaxzodbek.com www.shaxzodbek.com;
-    return 301 https://$host$request_uri;
-}
-server {
-    listen 443 ssl http2;
-    server_name shaxzodbek.com www.shaxzodbek.com;
     client_max_body_size 20M;
-
-    ssl_certificate     /etc/ssl/certs/shaxzodbek.crt;
-    ssl_certificate_key /etc/ssl/private/shaxzodbek.key;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
 
     location /static/ {
         alias /app/staticfiles/;
@@ -21,16 +11,13 @@ server {
         alias /app/media/;
     }
 
-    location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-    try_files $uri =404;
+    location /favicon.ico {
+        alias /app/static/img/favicon.ico;
     }
 
     location / {
-        proxy_pass         http://web:8000;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
