--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     volumes:
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media
-      - /root/shaxzodbek.com/nginx/ssl:/var/www/certbot:ro
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt/live/shaxzodbek.com/fullchain.pem:/etc/letsencrypt/live/shaxzodbek.com/fullchain.pem
+      - /etc/letsencrypt/live/shaxzodbek.com/privkey.pem:/etc/letsencrypt/live/shaxzodbek.com/privkey.pem
     depends_on:
       - web
